change some default

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
       </div>
 
     <footer>
-        <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> | Copyright 2008 - {{site.time | date:"%Y"}} by <a href="http://geeklu.com/about/">Luke</a> | <span class="label label-info">{{site.time | date:"%Y-%m-%d %H:%M:%S %Z"}}</span></small></p>
+        <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> | Copyright 2014 - {{site.time | date:"%Y"}} by <a href="http://blog.sevenche.com/about/">Jim</a>| <span class="label label-info">{{site.time | date:"%Y-%m-%d %H:%M:%S %Z"}}</span></small></p>
     </footer>
 
     </div>
