--- a/media/css/screen.css
+++ b/media/css/screen.css
@@ -82,7 +82,7 @@ h1 {
     font-size: 28px;
     line-height: 28px;
     margin: 0 0 28px 0;
-	background-color: #000;
+	background-color: rgb(185, 34, 31);
 	color: #fff;
 	display: inline-block;
 	padding: 12px;
