change the comment service to DuoShuo.com

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
       </div>
 
     <footer>
-        <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> | Copyright 2014 - {{site.time | date:"%Y"}} by <a href="http://blog.sevenche.com/about/">Jim</a>| <span class="label label-info">{{site.time | date:"%Y-%m-%d %H:%M:%S %Z"}}</span></small></p>
+        <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> | Free hosted at <a href="https://github.com/dashjim">Github</a> | Copyright 2014 - {{site.time | date:"%Y"}} by <a href="http://blog.sevenche.com/about/">Jim</a>| <span class="label label-info">{{site.time | date:"%Y-%m-%d %H:%M:%S %Z"}}</span></small></p>
     </footer>
 
     </div>
