fix - auto change the img size in post layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -71,7 +71,7 @@ div.resized_image p {
 </style>
 <script type="text/javascript">
 //resize the big pic
-$(document).ready(function() {
+$(window).load(function() {
   (
     function(maxht, maxwt, minht, minwt) {
       var imgs = document.getElementsByTagName('img');
