modifi the css to include the H4 and Blockquote style

--- a/media/css/screen.css
+++ b/media/css/screen.css
@@ -44,6 +44,7 @@ body {
 ol, ul {
 	list-style: none;
 }
+/*
 blockquote, q {
 	quotes: none;
 }
@@ -52,6 +53,14 @@ q:before, q:after {
 	content: '';
 	content: none;
 }
+** JIM added below blockquote style*/
+.content blockquote {
+    border-left: 4px solid #DDDDDD;
+    color: #777777;
+    padding: 0 15px;
+	margin: 15px 0;
+}
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
@@ -102,6 +111,10 @@ h3 {
 }
 section>h3 {
     margin: 0 0 24px 0;
+}
+h4 {
+    font-size: 16px;
+    line-height: 12px;
 }
 p, ul, ol, dl {
     line-height: 24px;
