add the English post template using the Disqus service

--- a/_layouts/post-en.html
+++ b/_layouts/post-en.html
@@ -34,7 +34,7 @@ layout: default
 </span>
 {% endif %}
 </section>
-{% include comments.md %}
+{% include comments_en.md %}
 <script type="text/javascript">
 $(function(){
   $(document).keydown(function(e) {
