--- a/media/css/screen.css
+++ b/media/css/screen.css
@@ -100,6 +100,7 @@ h2 {
     font-size: 26px;
     line-height: 48px;
     margin: 0 0 24px 0;
+	font-weight: bold;
 }
 h2 i {
 	font-size: 18px;
@@ -108,6 +109,7 @@ h2 i {
 h3 {
     font-size: 18px;
     line-height: 24px;
+	font-weight: bold;
 }
 section>h3 {
     margin: 0 0 24px 0;
@@ -115,6 +117,7 @@ section>h3 {
 h4 {
     font-size: 16px;
     line-height: 12px;
+	font-weight: bold;
 }
 p, ul, ol, dl {
     line-height: 24px;
