modify the footer of post to add more info about JIM

--- a/_layouts/post-en.html
+++ b/_layouts/post-en.html
@@ -6,8 +6,9 @@ layout: default
 {{ content }}
 </section>
 <section class="meta">
+<hr/>
 <span class="author">
-  <a href="http://blog.sevenche.com">{{ site.author }}</a>
+  <a href="http://blog.sevenche.com">{{ site.author }}</a> - Software Engineer with more than 7 years experience related to Java, Android and C++. He is now working for Avaya Emerging Product and Technology Department.
 </span>
 <span class="time">
   /
