--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,9 @@ layout: default
 {{ content }}
 </section>
 <section class="meta">
+<hr/>
 <span class="author">
-  <a href="http://blog.sevenche.com">{{ site.author }}</a>
+  <a href="http://blog.sevenche.com">{{ site.author }}</a> - 程序员，7年工作经验集中在Java, Android, C++，现就职于Avaya Emerging Product and Technology部门。
 </span>
 <span class="time">
   /
