added the post 2014-02-06

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
 <section class="meta">
 <hr/>
 <span class="author">
-  <a href="http://blog.sevenche.com">{{ site.author }}</a> - 程序员，7年工作经验集中在Java, Android, C++，现就职于Avaya Emerging Product and Technology部门。
+  <a href="http://blog.sevenche.com">{{ site.author }}</a> - 程序员，7年工作经验集中在Java, Android, C++，现就职于上海Avaya Emerging Product and Technology部门。
 </span>
 <br />
 <span class="license">
