--- a/_layouts/post-en.html
+++ b/_layouts/post-en.html
@@ -8,7 +8,7 @@ layout: default
 <section class="meta">
 <hr/>
 <span class="author">
-  <a href="http://blog.sevenche.com">{{ site.author }}</a> - Software Engineer with more than 7 years experience related to Java, Android and C++. He is now working for Avaya Emerging Product and Technology Department.
+  <a href="http://blog.sevenche.com">{{ site.author }}</a> - Software Engineer with more than 7 years experience related to Java, Android and C++. He is now working for Avaya Emerging Product and Technology Department Shanghai, China.
 </span>
 <br />
 <span class="license">
