--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 	<!-- Jim disable
 	script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?autoload=true&skin=Desert"></script-->
     <link href="/feed/" rel="alternate" title="{{ site.author }}" type="application/atom+xml" />
-    
+    <link rel="shortcut icon" href="/favicon.ico"/>
     <link rel="stylesheet" href="/media/css/highlight.css">
     <link href='/media/webfonts/ss-social.css' rel='stylesheet'>
     <link href='/media/webfonts/ss-standard.css' rel='stylesheet'>
