amend the favicon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
 	script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?autoload=true&skin=Desert"></script-->
     <link href="/feed/" rel="alternate" title="{{ site.author }}" type="application/atom+xml" />
     <link rel="shortcut icon" href="/favicon.ico"/>
+	<link rel="icon" href="http://blog.sevenche.com/favicon.ico"/>
+
     <link rel="stylesheet" href="/media/css/highlight.css">
     <link href='/media/webfonts/ss-social.css' rel='stylesheet'>
     <link href='/media/webfonts/ss-standard.css' rel='stylesheet'>
