change the css for mobile devices

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,19 @@
     <link rel="stylesheet" href="/media/css/highlight.css">
     <link href='/media/webfonts/ss-social.css' rel='stylesheet'>
     <link href='/media/webfonts/ss-standard.css' rel='stylesheet'>
+
+    <script language="JavaScript"><!--
+        browser_version= parseInt(navigator.appVersion);
+        browser_type = navigator.appName;
+
+        if (navigator.userAgent.match(/iPhone|iPod|Android|IEMobile/i)) {
+            document.write("<link href="/media/css/screen-mobil.css" rel="stylesheet">");
+        } else {
+            document.write("<link href="/media/css/screen.css" rel="stylesheet">");
+        }
+        // -->
+    </script>
+
     <link href="/media/css/screen.css" rel="stylesheet">
 
     <!--script type="text/javascript" src="/media/js/jquery-1.7.1.min.js"></script-->
