--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="author" content="{{ site.author }}" />
+    <meta name="viewport" content="width=device-width"> 
     <title>{{ page.title }} | {{ site.author }}</title>
 	<!-- Jim disable
 	script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?autoload=true&skin=Desert"></script-->
@@ -15,9 +16,6 @@
     <link href='/media/webfonts/ss-standard.css' rel='stylesheet'>
 
     <script language="JavaScript"><!--
-        browser_version= parseInt(navigator.appVersion);
-        browser_type = navigator.appName;
-
         if (navigator.userAgent.match(/iPhone|iPod|Android|IEMobile/i)) {
             document.write("<link href="/media/css/screen-mobil.css" rel="stylesheet">");
         } else {
