changes for mobile devices

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,9 +17,9 @@
 
     <script language="JavaScript"><!--
         if (navigator.userAgent.match(/iPhone|iPod|Android|IEMobile/i)) {
-            document.write("<link href="/media/css/screen-mobil.css" rel="stylesheet">");
+            document.write("<link href=\"/media/css/screen-mobil.css\" rel=\"stylesheet\">");
         } else {
-            document.write("<link href="/media/css/screen.css" rel="stylesheet">");
+            document.write("<link href=\"/media/css/screen.css\" rel=\"stylesheet\">");
         }
         // -->
     </script>
