change site description

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
       </div>
 
     <footer>
-        <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> | Free hosted at <a href="https://github.com/dashjim">Github</a> | Copyright 2014 - {{site.time | date:"%Y"}} by 
+        <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> | Free hosted at <a href="https://github.com/dashjim">Github</a> | Copyright 2014 - {{site.time | date:"%Y"}}  
 		<!-- *** Please Keep bellow link for at least 6 months! Thanks！*** -->
 		<a href="http://blog.sevenche.com">Template Maintained by Jim</a>
 		
